--- a/ui/src/app/shared/workflow/modal/node-edit/node.edit.modal.scss
+++ b/ui/src/app/shared/workflow/modal/node-edit/node.edit.modal.scss
@@ -1,11 +1,3 @@
-.ui.secondary.vertical.menu {
-    height: 100%;
-}
-
-.modalHeader {
-    display: flex;
-    justify-content: space-between;
-}
-.ui.icon.button {
-    background: transparent;
+.permForm {
+  margin-top: 20px;
 }
