--- a/ui/src/app/shared/permission/form/workflow-permission.form.html
+++ b/ui/src/app/shared/permission/form/workflow-permission.form.html
@@ -1,32 +1,37 @@
-<form class="ui form" *ngIf="groups.length > 0" (ngSubmit)="create()">
-    <div class="fields">
-        <div class="seven wide field">
-            <label>{{'group_name' | translate}}</label>
-            <sui-select *ngIf="newGroupPermission" class="fluid selection" [(ngModel)]="newGroupPermission.group.name"
-                [options]="groups" [isSearchable]="true" valueField="group.name" labelField="group.name" #operatorSelect
-                name="group-name">
-                <sui-select-option *ngFor="let option of operatorSelect.filteredOptions" [value]="option">
-                </sui-select-option>
-            </sui-select>
-        </div>
-        <div class="five wide field">
-            <label>{{'group_permission' | translate}}</label>
-            <sui-select class="fluid selection" [(ngModel)]="newGroupPermission.permission" [options]="permissionList"
-                valueField="value" #levelSelect name="permission-level" [optionTemplate]="optionLevelTemplate">
-                <sui-select-option *ngFor="let option of levelSelect.filteredOptions" [value]="option">
-                </sui-select-option>
-            </sui-select>
-            <ng-template let-option #optionLevelTemplate>
-                {{option.name | translate}}
-            </ng-template>
-        </div>
-        <div class="two wide center field">
-            <button *ngIf="buttonType === 'submit'" type="submit" class="ui green button" [class.loading]="loading"
-                [class.disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''"><i
-                    class="save icon"></i>{{ 'btn_save' | translate }}</button>
-            <button *ngIf="buttonType === 'button'" type="submit" class="ui icon blue button" [class.loading]="loading"
-                [class.disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''"><i
-                    class="plus icon"></i></button>
-        </div>
-    </div>
+<form nz-form *ngIf="groups.length > 0" (ngSubmit)="create()" nzLayout="vertical">
+    <nz-row>
+        <nz-col [nzSpan]="10">
+            <nz-form-item>
+                <nz-form-label>Group name</nz-form-label>
+                <nz-form-control *ngIf="newGroupPermission && groups">
+                    <nz-select nzShowSearch name="group-name" [(ngModel)]="newGroupPermission.group.name">
+                        <nz-option *ngFor="let g of groups" [nzValue]="g.group.name" [nzLabel]="g.group.name"></nz-option>
+                    </nz-select>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="10">
+            <nz-form-item>
+                <nz-form-label>Group permission</nz-form-label>
+                <nz-form-control>
+                    <nz-select nzShowSearch [(ngModel)]="newGroupPermission.permission" name="permission-level">
+                        <nz-option *ngFor="let p of permissionList" nzLabel="{{p.name | translate}}" [nzValue]="p.value"></nz-option>
+                    </nz-select>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="2">
+            <nz-form-label></nz-form-label>
+            <nz-form-control>
+                <ng-container *ngIf="buttonType === 'submit'" >
+                    <button nz-button type="submit" nzType="primary"  [nzLoading]="loading" [disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''">
+                        <i nz-icon nzType="save" nzTheme="outline"></i>Save</button>
+                </ng-container>
+                <ng-container *ngIf="buttonType === 'button'" >
+                    <button nz-button type="submit" nzType="default" [nzLoading]="loading" [disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''">
+                        <i nz-icon nzType="plus" nzTheme="outline"></i></button>
+                </ng-container>
+            </nz-form-control>
+        </nz-col>
+    </nz-row>
 </form>
