--- a/ui/src/app/shared/permission/form/workflow-permission.form.scss
+++ b/ui/src/app/shared/permission/form/workflow-permission.form.scss
@@ -1,13 +1,3 @@
-.ui.form {
-
-    .field>label {
-        color: grey;
-    }
-
-    .field {
-        .ui.button {
-            margin-top: 1.7em;
-        }
-    }
-
+nz-col {
+  padding-right: 20px;
 }
