refactor(ui): remove sm modal

--- a/ui/src/app/shared/action/action.html
+++ b/ui/src/app/shared/action/action.html
@@ -140,7 +140,7 @@
                                 (nzOnConfirm)="sendActionEvent('delete')"
                                 nzPopconfirmPlacement="topLeft"
                                 nz-button>
-                            <i nz-icon nzType="rest" nzTheme="outline"></i>Delete
+                            <i nz-icon nzType="delete" nzTheme="outline"></i>Delete
                         </button>
                     </li>
                 </ul>
