--- a/ui/src/app/views/admin/service/show/service.show.html
+++ b/ui/src/app/views/admin/service/show/service.show.html
@@ -17,7 +17,7 @@
 
             <div *ngIf="service.group">
                 <h4>Group</h4>
-                <p><a sm-item href="#" [routerLink]="['/settings', 'group', service.group.name]">{{service.group.name}}</a></p>
+                <p><a href="#" [routerLink]="['/settings', 'group', service.group.name]">{{service.group.name}}</a></p>
             </div>
 
             <h4>Heartbeat</h4>
