--- a/ui/src/app/views/pipeline/show/workflow/stage/form/pipeline.stage.form.html
+++ b/ui/src/app/views/pipeline/show/workflow/stage/form/pipeline.stage.form.html
@@ -1,27 +1,20 @@
-<form class="ui form" *ngIf="project && pipeline && stage">
-    <div class="field">
-        <div class="inline fields">
-            <div class="eight wide field">
-                <label>{{'common_name' | translate}}</label>
-                <input type="text" name="stageName" [(ngModel)]="stage.name" (keydown)="stage.hasChanged = true"
-                    *ngIf="!readOnly">
-                <div class="inline" *ngIf="readOnly">{{stage.name}}
-                </div>
-            </div>
-            <div class="eight wide field">
-                <div class="ui checkbox">
-                    <input type="checkbox" id="enabled_stage_{{stage.id}}" name="enabled" [(ngModel)]="stage.enabled"
-                        (change)="stage.hasChanged = true" [disabled]="readOnly">
-                    <label for="enabled_stage_{{stage.id}}">{{ 'common_enable' | translate }}</label>
-                </div>
-            </div>
-        </div>
-        <div class="field">
-            <h4>Conditions: </h4>
-            <app-conditions *ngIf="!loading" [project]="project" [readonly]="readOnly"
-                [triggerConditions]="triggerConditions" [(conditions)]="stage.conditions">
-            </app-conditions>
-            <div class="ui active centered inline loader" *ngIf="loading"></div>
-        </div>
-    </div>
+<form nz-form *ngIf="project && pipeline && stage" nzLayout="vertical">
+    <nz-form-item>
+        <nz-form-label>Name:</nz-form-label>
+        <nz-form-control>
+            <input nz-input type="text" name="stageName" [(ngModel)]="stage.name" (keydown)="stage.hasChanged = true" *ngIf="!readOnly">
+            <span *ngIf="readOnly">{{stage.name}}</span>
+        </nz-form-control>
+    </nz-form-item>
+    <label nz-checkbox name="enabled" [(ngModel)]="stage.enabled" (ngModelChange)="stage.hasChanged=true" [disabled]="readOnly">Enabled</label>
+    <nz-form-item>
+        <nz-form-label>Conditions:</nz-form-label>
+        <nz-form-control>
+            <nz-spin nzTip="Loading..." [nzSpinning]="loading">
+                <app-conditions [project]="project" [readonly]="readOnly"
+                                [triggerConditions]="triggerConditions" [(conditions)]="stage.conditions">
+                </app-conditions>
+            </nz-spin>
+        </nz-form-control>
+    </nz-form-item>
 </form>
