--- a/ui/src/app/views/settings/action/form/action.form.html
+++ b/ui/src/app/views/settings/action/form/action.form.html
@@ -124,7 +124,7 @@
                                 nzPopconfirmTitle="Are you sure you want to delete this action?"
                                 (nzOnConfirm)="deleteAction()"
                                 nzPopconfirmPlacement="topLeft"
-                                nz-button><i nz-icon nzType="rest" nzTheme="outline"></i>Delete</button>
+                                nz-button><i nz-icon nzType="delete" nzTheme="outline"></i>Delete</button>
             </ng-container>
             <ng-container *ngIf="!action.id">
                 <div nz-col nzSpan="24">
