--- a/ui/src/app/shared/button/upload/upload.button.html
+++ b/ui/src/app/shared/button/upload/upload.button.html
@@ -1,5 +1,6 @@
-<input type="file" (change)="fileEvent($event)" class="inputfile" id="embedpollfileinput" [accept]="accept"/>
-<label for="embedpollfileinput" class="ui {{size}} button">
-    <i class="ui upload icon"></i>
-    Upload
-</label>
+<nz-upload [nzBeforeUpload]="fileEvent" [nzAccept]="accept">
+    <button nz-button type="button">
+        <i nz-icon nzType="upload"></i>
+        Select File
+    </button>
+</nz-upload>
