--- a/ui/src/app/views/project/add/project.add.html
+++ b/ui/src/app/views/project/add/project.add.html
@@ -1,70 +1,74 @@
-<div id="AddProject" class="scrollingContent">
-    <form class="ui form" (ngSubmit)="createProject()">
-        <h2>{{ 'project_create' | translate }}</h2>
-        <div class="ui two column centered grid">
-            <div class="column">
-                <div class="field">
-                    <label>{{ 'project_name' | translate }}</label>
-                    <input type="text" name="projectname" [(ngModel)]="project.name" (keyup)="generateKey($event.target.value)">
-                </div>
-                <div class="ui error message" *ngIf="nameError">
-                    {{ 'project_name_error' | translate }}
-                </div>
-                <div class="field">
-                    <label>{{ 'project_key' | translate }}</label>
-                    <input type="text" name="projectkey" [(ngModel)]="project.key">
-                </div>
-                <div class="field">
-                    <label>{{ 'project_description' | translate }}</label>
-                    <textarea type="text" name="projectdescription" [(ngModel)]="project.description"></textarea>
-                </div>
-                <div class="ui error message" *ngIf="keyError">
-                    {{ 'project_key_error' | translate }}
-                </div>
-
-                <div class="field center aligned">
-                    <label>{{ 'project_icon' | translate }} ({{'common_optional' | translate}})</label>
-                    <div>
+<div class="AddProject scrollingContent">
+    <div nz-row>
+        <div nz-col nzSpan="12" nzOffset="6">
+            <h2>Create a new project</h2>
+            <form nz-form (ngSubmit)="createProject()" nzLayout="vertical">
+                <nz-form-item>
+                    <nz-form-label>Project name</nz-form-label>
+                    <nz-form-control>
+                        <input nz-input name="projectname" [(ngModel)]="project.name" (keyup)="generateKey($event.target.value)">
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-alert *ngIf="nameError" nzType="error" nzMessage="project name is mandatory"></nz-alert>
+                <nz-form-item>
+                    <nz-form-label>Project unique key</nz-form-label>
+                    <nz-form-control>
+                        <input nz-input name="projectkey" [(ngModel)]="project.key">
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-alert *ngIf="keyError" nzType="error" nzMessage="project unique key is mandatory and must be in upper case"></nz-alert>
+                <nz-form-item>
+                    <nz-form-label>Description</nz-form-label>
+                    <nz-form-control>
+                        <textarea nz-input name="projectdescription" [(ngModel)]="project.description"></textarea>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item>
+                    <nz-form-label>Project icon (Optional)</nz-form-label>
+                    <nz-form-control>
                         <div *ngIf="!fileTooLarge && project.icon">
                             <img class="proj-icon" [src]="project.icon" alt="icon"/>
                         </div>
-                        <app-upload-button accept=".png,.jpg,.jpeg" image="true" (event)="fileEvent($event)">
-                        </app-upload-button>
-                    </div>
-                </div>
-                <div class="ui red message field" *ngIf="fileTooLarge"  [textContent]="'common_file_too_large' | translate"></div>
-
+                        <app-upload-button accept=".png,.jpg,.jpeg" image="true" (event)="fileEvent($event)"></app-upload-button>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-alert *ngIf="fileTooLarge" nzType="error" nzMessage="Your file is too large (max 100Ko)"></nz-alert>
                 <hr>
-
-                <div class="ui message">
-                  {{'project_add_group_help' | translate}}
-                </div>
-                <div class="field">
-                  {{ 'project_permission_form_wizard_title' | translate }} <a class="pointing" (click)="modalCreateGroup.show()">{{ 'project_permission_form_wizard_new' | translate }}</a>
-                  <sm-select class="fluid search"
-                      [options]="{'fullTextSearch': true}"
-                      [model]="group?.id"
-                      (modelChange)="setGroup($event)"
-                      id="PermissionGroup">
-                      <option *ngFor="let g of groupList" [value]="g.id">{{g.name}}</option>
-                  </sm-select>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="right aligned column">
-                    <button class="ui green button" name="createproject" [class.loading]="loading"><i class="save icon"></i>{{ 'btn_create' | translate }}</button>
-                </div>
-            </div>
+                <nz-alert nzType="info" nzMessage="{{'project_add_group_help' | translate}}"></nz-alert>
+                <nz-form-item>
+                    <nz-form-label>
+                        {{ 'project_permission_form_wizard_title' | translate }} <a class="pointing" (click)="groupModalVisible = true">{{ 'project_permission_form_wizard_new' | translate }}</a>
+                    </nz-form-label>
+                    <nz-form-control>
+                        <nz-select name="group" nzShowSearch [ngModel]="group?.id" (ngModelChange)="setGroup($event)">
+                            <nz-option *ngFor="let g of groupList" [nzValue]="g.id" [nzLabel]="g.name"></nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nzJustify="end">
+                    <nz-form-control>
+                        <button nz-button nzType="primary" name="createproject" [nzLoading]="loading">
+                            <i nz-icon nzType="save" nzTheme="outline"></i>Create
+                        </button>
+                    </nz-form-control>
+                </nz-form-item>
+            </form>
         </div>
-    </form>
+    </div>
 </div>
-<sm-modal title="{{ 'group_create_title' | translate}}" class="fluid" #createGroupModal>
-    <modal-content>
-        <app-group-form mode="nonform" [group]="newGroup"></app-group-form>
-    </modal-content>
-    <modal-actions>
-        <div class="ui grey button" (click)="modalCreateGroup.hide()">{{ 'btn_cancel' | translate }}</div>
-        <div class="ui green button" name="creategroup" (click)="createGroup()" [class.loading]="loading" [class.disabled]="loading">{{ 'btn_create' | translate }}</div>
-    </modal-actions>
-</sm-modal>
+<nz-modal nzTitle="Create a group" [nzVisible]="groupModalVisible">
+    <div *nzModalContent>
+        <form nz-form>
+            <nz-form-item>
+                <nz-form-label>Groupe name</nz-form-label>
+                <nz-form-control>
+                    <input nz-input type="text" name="groupname" [(ngModel)]="newGroup.name">
+                </nz-form-control>
+            </nz-form-item>
+        </form>
+    </div>
+    <div *nzModalFooter>
+        <button nz-button (click)="groupModalVisible = false">Cancel</button>
+        <button nz-button nzType="primary" name="creategroup" (click)="createGroup()" [nzLoading]="loading" [disabled]="loading">Create</button>
+    </div>
+</nz-modal>
