--- a/ui/src/app/views/project/show/admin/repomanager/list/project.repomanager.list.html
+++ b/ui/src/app/views/project/show/admin/repomanager/list/project.repomanager.list.html
@@ -10,11 +10,11 @@
             <tr *ngFor="let r of getDataForCurrentPage()">
                 <td>
                     {{r.name}}
-                    <span *ngIf="r.username !== ''"> -
-                        {{ 'project_repoman_created_by' | translate }}{{r.username}}</span>
+                    <span *ngIf="r.created_by !== ''"> -
+                        {{ 'project_repoman_created_by' | translate }}{{r.created_by}}</span>
                 </td>
                 <td class="right aligned">
-                    <app-delete-button (event)="clickDeleteButton(r.name)" [loading]="deleteLoading">
+                    <app-delete-button (event)="clickDeleteButton(r.name)" [loading]="deleteLoading" *ngIf="r.type === ''">
                     </app-delete-button>
                 </td>
             </tr>
